<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- common -->
    <string name="app_name">移动校园</string>
    <string name="settings">设置</string>
    <string name="about_me">关于</string>
    <string name="refresh">刷新</string>

    <string name="add_course">增加课程</string>
    <string name="curriculum_schedule_in_this_week">本周课程表</string>
    <string name="curriculum_schedule_in_this_semester">总课程表</string>
    <string name="curriculum_schedule_in_next_semester">下学期课程表</string>
    <string name="week_of_semester">第%d周</string>
    <string name="transcripts">成绩单</string>

    <string name="updating">正在更新</string>
    <string name="no_network">无网络连接</string>

    <!-- used in account_setting_dialog.xml -->
    <string name="user_name">学号</string>
    <string name="password">密码</string>
    <!-- used in time_and_address_entry.xml -->
    <string name="week_number">周数</string>
    <string name="day_of_week">星期</string>
    <string name="period">节数</string>
    <string name="address">地点</string>
    <!-- used in CourseDetailsActivity.java -->
    <string name="course_details">课程详情</string>
    <string name="modify_course">修改课程</string>
    <string name="course_info_change">修改</string>
    <string name="course_info_submit">提交</string>
    <!-- used in add_course_info.xml -->
    <string name="course_code">课程代码</string>
    <string name="class_number">教学班号</string>
    <string name="teachers">任课老师</string>
    <string name="credit">课程学分</string>
    <string name="test_score">结课成绩</string>
    <string name="total_score">期末总评</string>
    <string name="grade_point">课程绩点</string>
    <string name="time_and_address">时间地点</string>

    <!-- used in CoursesActivity -->
    <string name="no_courses_in_database_dialog_title">自动更新课程？</string>
    <string name="no_courses_in_database_dialog_message">您尚未添加课程，现在自动从教务处网站读取？\n您也可以通过菜单项以后更新。
    </string>
    <string name="no_courses_in_database_dialog_positive">现在更新</string>
    <string name="no_courses_in_database_dialog_negative">以后再说</string>
    <string name="incorrect_id_or_password_dialog_title">用户名或密码错误</string>
    <string name="incorrect_id_or_password_dialog_message">您设置的用户名或密码错误，现在就去修改？</string>
    <string name="incorrect_id_or_password_dialog_positive">现在修改</string>
    <string name="incorrect_id_or_password_dialog_negative">以后再说</string>
    <!-- used in ListCoursesFragment.java -->
    <string name="no_course">今日无课</string>

    <!-- student info -->
    <string name="personal_information">个人信息</string>
    <string name="student_number">学号</string>
    <string name="student_name">姓名</string>
    <string name="gender">性别</string>
    <string name="unknown">未知</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="birthday">生日</string>
    <string name="academic_period">学制</string>
    <string name="admission_time">入学时间</string>
    <string name="school">学院</string>
    <string name="major">专业</string>
    <string name="class_name">班级名称</string>
    <string name="photo">照片</string>

    <!-- used in ShowOnePostActivity.java -->
    <string name="open_with_browser">用浏览器打开</string>
    <!-- used in PostUpdater.java and ListPostsActivity.java -->
    <string name="start_to_update_post_automatically">开始自动更新通知</string>
    <string name="has_updated_posts">更新了 %d 条通知</string>
    <string name="no_new_post">无新通知</string>
    <string name="fail_to_update_post">更新通知失败</string>
    <!-- used in ListPostsActivity.java -->
    <string name="post">通知</string>
    <!-- used in ListPostsFragment.java -->
    <string name="no_post">尚无通知</string>
    <string name="search">搜索</string>
    <string name="search_hint">搜索 通知</string>
    <string name="unknown_source">未知来源</string>
    <string name="teaching_affairs">教务处</string>
    <string name="school_of_computer_and_communication_engineering">计算机与通信工程学院</string>
    <string name="student_website_of_SCCE">计算机与通信工程学院学生网站</string>
    <!-- used in ListScoresFragment.java -->
    <string name="course_name">课程名称</string>
    <string name="course_test_score">考试</string>
    <string name="course_total_score">总评</string>
    <string name="course_grade_point">绩点</string>
    <string name="course_credit">学分</string>
    <string name="course_kind">课程性质</string>

    <!-- SettingsActivity.java -->
    <string name="pref_interval_of_post_updating_summary">每隔 %s ，更新一次通知</string>
    <!-- preferences.xml -->
    <string name="prefs_general_settings">一般设置</string>
    <string name="pref_student_account">账号</string>
    <string name="pref_student_account_summary">设置教务处查询账号</string>
    <string name="pref_request_password_for_private_information">密码保护私密信息</string>
    <string name="pref_request_password_for_private_information_summary">显示私密信息（例如成绩、个人信息）前询问密码</string>
    <string name="pref_starting_date">第0周</string>
    <string name="pref_starting_date_summary">设置本学期第0周日期（如开学日期），请参考教务处校历</string>
    <string name="prefs_settings_of_post_updating">通知更新设置</string>
    <string name="pref_update_post_automatically">自动更新通知</string>
    <string name="pref_update_post_automatically_summary">是否自动更新通知</string>
    <string name="pref_interval_of_post_updating">通知更新间隔</string>
    <string name="pref_use_alternative_in_mobile_connection">移动网络下使用后备方案</string>
    <string name="pref_use_alternative_in_mobile_connection_summary">
        移动网络下，当首选网络更新方案失效时，使用后备方案（费较多流量）。
    </string>
    <string name="prefs_others">其它</string>
    <string name="pref_about_summary">有关此软件的基本信息</string>

    <!-- Network.java -->
    <string name="no_connection_title">打开网络开关？</string>
    <string name="no_connection_message">网络连接不可用，现在打开网络开关？</string>
</resources>