<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">
    <TextView
            android:id="@+id/week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/week_input"
            android:text="@string/week_number"
            android:textSize="18sp"
            style="@style/wordStyle"/>
    <EditText
            android:id="@+id/week_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/week"
            android:inputType="none"
            android:cursorVisible="false"
            android:longClickable="false"
            android:focusable="false"/>
    <TextView
            android:id="@+id/day_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/day_of_week_input"
            android:layout_below="@+id/week_input"
            android:text="@string/day_of_week"
            android:textSize="18sp"
            style="@style/wordStyle"/>
    <EditText
            android:id="@+id/day_of_week_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/day_of_week"
            android:layout_below="@+id/week_input"
            android:inputType="none"
            android:cursorVisible="false"
            android:longClickable="false"
            android:focusable="false"/>
    <TextView
            android:id="@+id/period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/period_input"
            android:layout_below="@+id/day_of_week_input"
            android:text="@string/period"
            android:textSize="18sp"
            style="@style/wordStyle"/>
    <EditText
            android:id="@+id/period_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/period"
            android:layout_below="@+id/day_of_week_input"
            android:inputType="none"
            android:cursorVisible="false"
            android:longClickable="false"
            android:focusable="false"/>
    <TextView
            android:id="@+id/classroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/classroom_input"
            android:layout_below="@+id/period_input"
            android:text="@string/address"
            android:textSize="18sp"
            style="@style/wordStyle"/>
    <EditText
            android:id="@+id/classroom_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/classroom"
            android:layout_below="@+id/period_input"
            android:inputType="text"/>
</RelativeLayout>
